--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity android:name=".Splash"
+            android:label="@string/title_activity_maps" >
+
+        </activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
